manifests/ingress-monitor-cluster.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: prometheus
    release: istiod-prometheus
  namespace: istio-system
spec:
  rules:
  - host: pm.istio.k8s.com
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: grafana
    release: istiod-grafana
  namespace: istio-system
spec:
  rules:
  - host: gm.istio.k8s.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /  
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger-kiali-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: jaeger-kiali
    release: istiod-jaeger-kiali
  namespace: istio-system
spec:
  rules:
  - host: kjm.istio.k8s.com
    http:
      paths:
      - backend:
          serviceName: jaeger-query
          servicePort: 16686
        path: /jaeger
      - backend:
          serviceName: kiali
          servicePort: http-kiali
        path: /kiali
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: kiali-ingress
#   annotations:
#     kubernetes.io/ingress.class: traefik
#   labels:
#     app: kiali
#     release: istiod-kiali
#   namespace: istio-system
# spec:
#   rules:
#   - host: ku02.istio.k8s.com
#     http:
#       paths:
#       - backend:
#           serviceName: kiali
#           servicePort: http-kiali
#         path: /kiali
